--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "jQuery": "^1.7.4",
     "method-override": "^2.3.10",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "pretty-checkbox": "^3.0.3"
   }
 }
